增加了简单的导入时判空的操作